# ECSEngine2D

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  clang.yml  gcc.yml  msvc.yml
assets/: students.txt
include/assignment1/: CMakeLists.txt  main.cpp
include/assignment1/configs/: config.txt
include/assignment2/: CMakeLists.txt  Components.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  Vec2.cpp  main.cpp
include/assignment2/configs/: config.txt
include/assignment3/: Action.cpp  Action.hpp  Animation.hpp  Assets.cpp  Assets.hpp  CMakeLists.txt  Components.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  GameEngine.cpp  GameEngine.hpp  Physics.hpp  Scene.cpp  Scene.hpp  Scene_Menu.cpp  Scene_Menu.hpp  Scene_Play.hpp  main.cpp
include/assignment3/TODO/: Animation.cpp  Physics.cpp  Scene_Play.cpp
include/assignment3/configs/: assets.txt  level1.txt  level2.txt  level3.txt  specs.txt
src/: main.cpp
src/Engine/: Entity.cpp  Entity.hpp  EntityManager.hpp  Game.cpp  Game.hpp  GameEngine.hpp  Vec2.cpp  Vec2.hpp
src/Engine/Assets/: Assets.hpp
src/Engine/Components/: Animation.hpp  CBBox.hpp  CName.hpp  CScore.hpp  CShape.hpp  CTransform.hpp  Components.hpp
src/Engine/Entity/: Entity.hpp  EntityManager.cpp
src/Engine/Scenes/: Scene.hpp  Scene_Menu.hpp  Scene_Play.hpp
src/InitialExamples/: Course.h  DynamicArray.h  Student.h
